--- a/Alpha/AlphaMvc/Content/Site.css
+++ b/Alpha/AlphaMvc/Content/Site.css
@@ -169,6 +169,7 @@ footer {
     /*clear: both;
     background-color: #444444;
     height: 100px;*/
+        /*margin-top: 10px;*/
     height:70px;
     font-size: initial;  
     /*position:fixed;*/ 
