--- a/Alpha/AlphaMvc/Views/AllActivity/AllActivity.cshtml
+++ b/Alpha/AlphaMvc/Views/AllActivity/AllActivity.cshtml
@@ -247,9 +247,25 @@ $(document).ready(function () {
         font-family: serif;
     }
 </style>
-<h2 class="bigtopic">Job Order</h2><h2>Man Power</h2>
+<div class="container-fluid">
+    @*<div class="row">*@
+    <div class="col-xs-12 col-sm-5 col-lg-5 calendarpad">
+        <div class="form-group">
+            <h2 class="topic1">Job Order</h2>
+            <div id="calendar"></div>
+        </div>
+    </div>
+    <div class="col-xs-12 col-sm-5 col-lg-5 calendarManpad">
+        <div class="form-group">
+            <h2 class="topic2">Man Power</h2>
+            <div id="calendarManPower"></div>
+        </div>
+    </div>
+    @*</div>*@
+</div>
+@*<h2 class="bigtopic">Job Order</h2><h2>Man Power</h2>
 <div id="calendar"></div>
-<div id="calendarManPower"></div>
+<div id="calendarManPower"></div>*@
 <section class="features">
         <div class="table-responsive">
             <table class="barattach-gray">
