--- a/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AlphaMvc.Models.BDCModels
 @{
-    ViewBag.Title = "CreateBDC";
+    ViewBag.Title = "BDC";
 }
 <script src="@Url.Content("~/Scripts/CUDS/BDC/CreateBDC.js")" type="text/javascript"></script>
 @*<script src="@Url.Content("~/Scripts/CUDS/BDC/BDCJob.js")" type="text/javascript"></script>*@
