--- a/Alpha/AlphaMvc/Views/IncomeMaster/CreateIncomeMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/IncomeMaster/CreateIncomeMaster.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AlphaMvc.Models.IncomeMaster
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "IncomeMaster";
 }
 
 @*<h2>Master Income Create</h2>*@
