--- a/Alpha/AlphaMvc/Views/IncomeMaster/IndexIncomeMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/IncomeMaster/IndexIncomeMaster.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "IndexIncomeMaster";
+    ViewBag.Title = "IncomeMaster";
 }
 
 @*<h2>Master Income</h2>*@
@@ -36,6 +36,25 @@
         font-family: Arial, sans-serif;
     }*/
 </style>
+@*<div class="container-fluid">
+    <div class="row barattach-blue mgrleft0">
+        <div class="col-xs-4 col-sm-5 col-lg-3">
+            <div class="form-group">
+                <label class="lbltopic">Master Income</label>
+            </div>
+        </div>
+        <div class="col-xs-1 col-sm-5 col-lg-1">
+            <div class="form-group mgrtop10">
+                <a href="/IncomeMaster/CreateIncomeMaster"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" id="imgIncomeCreate" /></a>
+            </div>
+        </div>
+        <div class="col-xs-3 col-sm-5 col-lg-5">
+            <div class="form-group mgrsearch">
+                <label class="lblsearch">Search :</label><input id="searchInput" placeholder="Type To Filter" class="textleft">
+            </div>
+        </div>
+    </div>
+</div>*@
 <table class="barattach-blue">
     <tr>
         <td>
