--- a/Alpha/AlphaMvc/Views/ProductAdjust/CreateProductAdjust.cshtml
+++ b/Alpha/AlphaMvc/Views/ProductAdjust/CreateProductAdjust.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "CreateProductAdjust";
+    ViewBag.Title = "StockAdjust";
 }
 
 <script src="@Url.Content("~/Scripts/CUDS/ProductAdjustment/CreateProductAdjustment.js")" type="text/javascript"></script>
