--- a/Alpha/AlphaMvc/Views/ReportBreakdownCost/IndexReportBreakDownCost.cshtml
+++ b/Alpha/AlphaMvc/Views/ReportBreakdownCost/IndexReportBreakDownCost.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "IndexReportBreakDownCost";
+    ViewBag.Title = "ReportBreakDownCost";
 }
 
 @*<h2>IndexReportBreakDownCost</h2>*@
