--- a/Alpha/AlphaMvc/Views/ReportJobOrder/IndexReportJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/ReportJobOrder/IndexReportJobOrder.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "IndexReportJobOrder";
+    ViewBag.Title = "ReportJobOrder";
 }
 
 <script src="@Url.Content("~/Scripts/CUDS/Report/IndexReportJobOrder.js")" type="text/javascript"></script>
