--- a/Alpha/AlphaMvc/Views/Requisition/EditRequisition.cshtml
+++ b/Alpha/AlphaMvc/Views/Requisition/EditRequisition.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "EditRequisition";
+    ViewBag.Title = "Requisition";
 }
 
 @*<h2>
@@ -1248,7 +1248,7 @@
         <div>
             <input type="hidden" id="hidRequisitionID2" class="hidRequisitionID2" />
             <div class="wrapper">
-                <div>
+                <div class="customresponsive">
                     <table id="tabRequisitionOther" class="example">
                         <thead class="theader">
                             <tr>
