--- a/Alpha/AlphaMvc/Views/Requisition/IndexRequisition.cshtml
+++ b/Alpha/AlphaMvc/Views/Requisition/IndexRequisition.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "IndexRequisition";
+    ViewBag.Title = "Requisition";
 }
 
 <script src="@Url.Content("~/Scripts/CUDS/RequisitionAndReturn/IndexRequisition.js")" type="text/javascript"></script>
