--- a/Alpha/AlphaMvc/Views/SecurityProfile/CreateSecurityProfile.cshtml
+++ b/Alpha/AlphaMvc/Views/SecurityProfile/CreateSecurityProfile.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "CreateSecurityProfile";
+    ViewBag.Title = "SecurityProfile";
 }
 
 <script src="@Url.Content("~/Scripts/CUDS/SecurityProfile/CreateSecurityProfile.js")" type="text/javascript"></script>
