--- a/Alpha/AlphaMvc/Views/Technician/CreateTechnician.cshtml
+++ b/Alpha/AlphaMvc/Views/Technician/CreateTechnician.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AlphaMvc.Models.TechnicianModels
 @{
-    ViewBag.Title = "CreateTechnician";
+    ViewBag.Title = "Technician";
 }
 
 <h2>Create</h2>
