--- a/Alpha/AlphaMvc/Views/Technician/EditTechnician.cshtml
+++ b/Alpha/AlphaMvc/Views/Technician/EditTechnician.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AlphaMvc.Models.TechnicianModels
 @{
-    ViewBag.Title = "EditTechnician";
+    ViewBag.Title = "Technician";
 }
 
 <script src="@Url.Content("~/Scripts/CUDS/Technician/EditTechnician.js")" type="text/javascript"></script>
