--- a/Alpha/AlphaMvc/Views/Technician/IndexTechnician.cshtml
+++ b/Alpha/AlphaMvc/Views/Technician/IndexTechnician.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "IndexTechnician";
+    ViewBag.Title = "Technician";
 }
 
 <script src="@Url.Content("~/Scripts/CUDS/Technician/IndexTechnician.js")" type="text/javascript"></script>
