--- a/Alpha/AlphaMvc/Views/User/CreateUser.cshtml
+++ b/Alpha/AlphaMvc/Views/User/CreateUser.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "CreateUser";
+    ViewBag.Title = "User";
 }
 
 <script src="@Url.Content("~/Scripts/CUDS/User/CreateUser.js")" type="text/javascript"></script>
