--- a/Alpha/AlphaMvc/Content/custom.css
+++ b/Alpha/AlphaMvc/Content/custom.css
@@ -20,6 +20,38 @@
  */
 
 /*! normalize.css v2.1.0 | MIT License | git.io/normalize */
+.padleft0
+{
+    padding-left:0px !important;
+}
+.padright0
+{
+    padding-right:0px !important;
+}
+.mgrsearch
+{
+    margin-top: 5px;
+    margin-left: 5px;
+}
+    .mobilesearch{
+    visibility:hidden;
+    display:none;
+}
+    .desktopsearch{
+    visibility:visible;
+}
+.lbltopic
+    {
+        padding-top: 10px;
+        color: white
+    }
+.lblsearch{
+    color: white;
+    margin-left: 12%;
+}
+.veralign-top{
+     vertical-align: top;
+}
 .floatnone{
     float: none !important;
 }
@@ -31,6 +63,18 @@
 {
     padding-left: 15% !important;
 }
+.padbuttom10
+{
+    padding-bottom: 10px;
+}
+.calendarpad{
+    padding-left: 0% !important;
+    padding-right: 16.5% !important;
+} 
+.calendarManpad{
+    padding-left: 0% !important;
+    padding-right: 0% !important;
+} 
 .pad7{
     padding: 7px;
 } 
@@ -49,10 +93,16 @@
 {
     height: 100px !important;
 }
+.mgrleft0{
+    margin-left: 0px !important;
+}
+.mgrright0{
+    margin-right: 0px !important;
+}
 .wd70{
     width: 70px;
 }
-.mgr-top10
+.mgrtop10
 {
     margin-top: 10px !important;
 }
@@ -96,6 +146,14 @@
 {
     width: 106% !important;
 }
+.txtareasize100
+{
+    width: 100% !important;
+}
+.txtareasize110
+{
+    width: 110% !important;
+}
 .txtsize80
 {
     width: 80px !important;
@@ -109,9 +167,41 @@
 {
     padding-top: 8.1%;
     padding-left: 5.3%;
-    /*padding-left: 13%;*/
+      /*margin-left: 6.5%;*/
 }
 @media (max-width: 680px) {
+    .padleft10p
+{
+    padding-left: 0% !important;
+}
+    .mgrsearch
+{
+    margin-top: 5px;
+    margin-left: 5px;
+}
+    .mobilesearch{
+    /*visibility:visible;*/
+    display:grid;
+}
+    .desktopsearch{
+    display:none;
+}
+    .lbltopic
+    {
+        padding-top: 10px;
+        color: white
+    }
+    .lblsearch{
+    color: white;
+    margin-left: 12%;
+    display:none;
+}
+    .calendarpad{
+    padding: 0% !important;
+} 
+    .calendarManpad{
+     padding-left: 0.5% !important;
+} 
     .txtpadding
 {
      padding: 5px;
@@ -188,6 +278,8 @@
     background: url(../Images/ars48x3.jpg) no-repeat top center;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 14px;
+    /*width: 1347px;
+    height: 108px !important;*/
     line-height: 1.428571429;
     color: #333333;
     /*background-color: #c20a0a;*/
@@ -529,7 +621,8 @@ body {
   font-size: 14px;
   line-height: 1.428571429;
   color: #333333;
-  background-color: #c20a0a;
+  /*background-color: #c20a0a;*/
+  background-color: #efeeef;
 }
 
 input,
@@ -823,6 +916,10 @@ dd {
 }
 
 @media (min-width: 768px) {
+    /*.padleft10p
+{
+    padding-left: 0% !important;
+}*/
   .dl-horizontal dt {
     float: left;
     width: 160px;
@@ -1955,7 +2052,7 @@ table th[class*="col-"] {
     margin-bottom: 15px;
     overflow-x: scroll;
     overflow-y: hidden;
-    border: 1px solid #dddddd;
+    /*border: 1px solid #dddddd;*/
   }
   .table-responsive > .table {
     margin-bottom: 0;
