--- a/Alpha/AlphaMvc/Content/editable/addrowstyle.css
+++ b/Alpha/AlphaMvc/Content/editable/addrowstyle.css
@@ -9,7 +9,8 @@
     img {
     }
     .imgpreview{
-        width: 248px;
+        /*width: 248px;*/
+        width: 225px;
         height: 170px;
         margin-top: 5px;
         background-color:#f5f5f5;
@@ -722,6 +723,20 @@ select{
 }
 
 @media screen and (max-width:680px) {
+    .imgpreview{
+        /*width: 248px;*/
+        width: 210px;
+        height: 170px;
+        margin-top: 5px;
+        background-color:#f5f5f5;
+        border-style: solid;
+        border-color: cadetblue;
+        border-width: 1px;
+        text-align: center;
+        font-family: monospace;
+        color: #dddddd;
+        font-size: -webkit-xxx-large;
+    }
     table td select {
         /*background: #fff;
                 height: 18px;
