--- a/Alpha/AlphaMvc/Views/CalendarJob/IndexCalendarJob.cshtml
+++ b/Alpha/AlphaMvc/Views/CalendarJob/IndexCalendarJob.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "IndexCalendarJob";
+    ViewBag.Title = "CalendarJob";
 }
 
 <link href="@Url.Content("~/Content/calendar/fullcalendar.css")" rel="stylesheet" type="text/css" />
