--- a/Alpha/AlphaMvc/Views/ExpenseMaster/EditExpenseMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/ExpenseMaster/EditExpenseMaster.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AlphaMvc.Models.ExpenseMaster
 @{
-    ViewBag.Title = "EditExpenseMaster";
+    ViewBag.Title = "ExpenseMaster";
 }
 
 @*<h2>Master Expense Edit</h2>*@
@@ -28,58 +28,52 @@
     @using (Html.BeginForm())
     {
         <form>
-            @*<div class="container-fluid">
+            <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-2 col-md-2 col-sm-3 col-xs-4">
-                        <div class="short-div">
-                            <div class="form-group">
-                                <label for="cmbExpenseGroup">Expense Group:</label>
-                                <select id="cmbExpenseGroup" class="form-control text-floatleft text-size180" required autofocus></select>
-                            </div>
-                        </div>
-                        <div class="short-div">
-                            <div class="form-group">
-                                <label for="txtDetail">Detail:</label>
-                                <input type="text" id="txtDetail" class="form-control text-size180" placeholder="" />
-                            </div>
+                    <div class="col-xs-6 col-sm-2 col-lg-2">
+                        <div class="form-group">
+                            <label for="cmbExpenseGroup">Expense Group:</label>
+                            <select id="cmbExpenseGroup" class="form-control text-size140" required autofocus></select>
                         </div>
                     </div>
-                    <div class="col-lg-2 col-md-2 col-sm-3 col-xs-12">
-                        <div class="short-div">
-                            <div class="form-group">
-                                <label for="txtDetail">Detail:</label>
-                                <input type="text" id="txtDetail" class="form-control text-size180" placeholder="" />
-                            </div>
-                        </div> 
+                    <div class="col-xs-6 col-sm-5 col-lg-5">
+                        <div class="form-group">
+                            <label for="txtDetail">Detail:</label>
+                            <input type="text" id="txtDetail" class="form-control text-size180" placeholder="" />
+                        </div>
                     </div>
                 </div>
-            </div>*@
-            <ul class="form-style">
-                <li>
-                    <label class="label-small-22 floatnone">Expense Group</label>
-                    <select id="cmbExpenseGroup" class="field-divided text-size180" required autofocus></select>
-                </li>
-                <li>
-                    <label class="label-2 floatnone">Detail<span class="required">*</span></label>
-                    <input type="text" id="txtDetail" class="field-divided text-size200" placeholder="" />
-                </li>
-                <li>
-                    <label>Price List<span class="required">*</span></label>
-                    <input type="text" id="txtPricelist" class="field-divided text-floatleft text-size120 text-right" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 46" value="0" onblur="convertFloat('#txtPricelist')"/>&nbsp;<label>Bath</label>
-                </li>
-                <li>
-                    <label>Sequence<span class="required">*</span></label>
-                    <input type="text" id="txtSeq" class="field-divided text-size40 text-right" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="1" />
-                </li>
-                <li>
-                    <button type="button" id="btnSave" class="btn btn-primary mgr10" onclick="Isvalidate('Update', 'ExpenseMaster', @Request.Params["id"])">Save</button><button type="button" id="btnCancel" class="btn btn-danger" onclick="Redirect()">Cancel</button>
-                </li>
-            </ul>
-            <ul class="form-style">
-                <li>
-                    
-                </li>
-            </ul>
+                <div class="row">
+                    <div class="col-xs-12 col-md-12 col-sm-5 col-lg-7 padleft0">
+                        <div class="col-xs-6 col-md-6 col-sm-4 col-lg-2">
+                            <div class="form-group">
+                                <label for="txtPricelist">Price List:<span class="required">*</span></label>
+                                <input type="text" id="txtPricelist" class="form-control text-size100 text-right" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" onblur="convertFloat('#txtPricelist')" />
+                            </div>
+                        </div>
+                        <div class="col-xs-6 col-md-6 col-sm-1 col-lg-5">
+                            <div class="form-group">
+                                <label for="txtSerialNo">Sequence:<span class="required">*</span></label>
+                                <input type="text" id="txtSeq" class="form-control text-size40 text-right" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="1" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-8 col-sm-5 col-lg-4 padleft0">
+                        <div class="col-xs-3 col-sm-2 col-lg-2">
+                            <div class="form-group">
+                                <button type="button" id="btnSave" class="btn btn-primary mgr10" onclick="Isvalidate('Update', 'ExpenseMaster', @Request.Params["id"])">Save</button>
+                            </div>
+                        </div>
+                        <div class="col-xs-4 col-sm-3 col-lg-3">
+                            <div class="form-group">
+                                <button type="button" id="btnCancel" class="btn btn-danger" onclick="Redirect()">Cancel</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </form>
 
     }
