--- a/Alpha/AlphaMvc/Views/IncomeMaster/EditIncomeMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/IncomeMaster/EditIncomeMaster.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AlphaMvc.Models.IncomeMaster
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "IncomeMaster";
 }
 
 @*<h2>Master Income Edit</h2>*@
