--- a/Alpha/AlphaMvc/Views/ProductAdjust/IndexProductAdjust.cshtml
+++ b/Alpha/AlphaMvc/Views/ProductAdjust/IndexProductAdjust.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "IndexProductAdjust";
+    ViewBag.Title = "StockAdjust";
 }
 
 @*<script src="@Url.Content("~/Scripts/EditableGrid/paging.js")" type="text/javascript"></script>*@
