--- a/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AlphaMvc.Models.Product
 @{
-    ViewBag.Title = "EditProducts";
+    ViewBag.Title = "Stock";
 }
 
 <script src="@Url.Content("~/Scripts/CUDS/Products/EditProducts.js")" type="text/javascript"></script>
@@ -31,7 +31,7 @@
             <input type="hidden" id="hidAttachPath" />
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-2 col-md-2 col-sm-3 col-xs-12">
+                    <div class="col-lg-2 col-md-2 col-sm-3 col-xs-4">
                         <div class="short-div" @*style="background-color:lightblue"*@>
                             @*Span 2*@
                             <div class="form-group">
@@ -47,10 +47,10 @@
                                 @*<select id="cmbProductType" name="cmbProductType" class="form-control cmbsize106"></select>*@
                             </div>
                         </div>
-                        <div class="short-div" >
+                        <div class="short-div">
                             @*Span 2*@
                             <div class="form-group">
-                                
+
                                 <label for="txtBrand">ยี่ห้อ:</label>
                                 <input type="text" id="txtBrand" class="form-control" placeholder="" />
                             </div>
@@ -66,13 +66,13 @@
                             @*Span 2*@
                             <div class="form-group">
                                 @*<label for="txtDiscription">รายการสินค้า:</label>
-                                <textarea id="txtDiscription" class="form-control txtareasize106 txtarea"></textarea>*@
+                    <textarea id="txtDiscription" class="form-control txtareasize106 txtarea"></textarea>*@
                                 <label for="txtModel">รุ่น:</label>
                                 <input type="text" id="txtModel" class="form-control" placeholder="" />
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2 col-md-2 col-sm-3 col-xs-12">
+                    <div class="col-lg-2 col-md-2 col-sm-3 col-xs-4">
                         <div class="short-div">
                             @*Span 3*@
                             <div class="form-group">
@@ -110,7 +110,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2 col-md-2 col-sm-3 col-xs-12">
+                    <div class="col-lg-2 col-md-2 col-sm-3 col-xs-4">
                         <div class="short-div">
                             @*Span 4*@
                             <div class="form-group">
@@ -118,28 +118,28 @@
                                 <input type="text" id="dtReceiveDate" class="form-control" placeholder="" required />
                             </div>
                         </div>
-                        <div class="col-lg-12 col-md-2 col-sm-3 col-xs-12 pad0">
-                            <div class="col-xs-4 col-sm-3 col-lg-6 pad0">
+                        <div class="col-xs-12 col-md-2 col-sm-3 col-lg-12 pad0">
+                            <div class="col-xs-12 col-sm-3 col-lg-6 pad0">
                                 <div class="form-group">
                                     <label for="txtBalance">ยกมา:<span class="required">*</span></label>
                                     <input type="number" id="txtBalance" class="form-control txtsize80" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 46" placeholder="" onblur="GetRemain()" required />
                                 </div>
                             </div>
-                            <div class="col-xs-4 col-sm-3 col-lg-6 pad0">
+                            <div class="col-xs-12 col-sm-3 col-lg-6 pad0">
                                 <div class="form-group">
                                     <label for="txtRemain">คงเหลือ:<span class="required">*</span></label>
                                     <input type="number" id="txtRemain" class="form-control txtsize80" placeholder="" required disabled />
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-12 col-md-2 col-sm-3 col-xs-12 pad0">
-                            <div class="col-xs-4 col-sm-3 col-lg-6 pad0">
+                        <div class="col-xs-12 col-md-2 col-sm-3 col-lg-12 pad0">
+                            <div class="col-xs-12 col-sm-3 col-lg-6 pad0">
                                 <div class="form-group">
                                     <label for="txtLost">หาย:</label>
                                     <input type="text" id="txtLost" class="form-control txtsize80" placeholder="" disabled />
                                 </div>
                             </div>
-                            <div class="col-xs-4 col-sm-3 col-lg-6 pad0">
+                            <div class="col-xs-12 col-sm-3 col-lg-6 pad0">
                                 <div class="form-group">
                                     <label for="txtRepair">ซ่อม:</label>
                                     <input type="text" id="txtRepair" class="form-control txtsize80" placeholder="" disabled />
@@ -157,21 +157,26 @@
                             @*Span 4*@
                         </div>
                     </div>
-                    <div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 spndiv" >
+                    <div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 spndiv">
                         @*Span 5*@
-                        <div class="form-group">
-                            <input type="file" name="photo" id="photo" onchange="readURL(this);" style="color:transparent;">
-                            <div class="imgpreview"><img id="imgPreview" alt="your image" class="img-responsive" /></div>
+                        <div class="col-xs-6 col-sm-3 col-lg-6">
+                            <div class="form-group">
+                                <input type="file" name="photo" id="photo" onchange="readURL(this);" style="color:transparent;">
+                                <div class="imgpreview"><img id="imgPreview" alt="your image" class="img-responsive" /></div>
+                            </div>
                         </div>
-                        <div class="form-group">
-                            <label for="txtRemark">หมายเหตุ:</label>
-                            <textarea id="txtRemark" class="form-control txtareasize106 txtarea"></textarea>
+                        @*<div class="clearfix visible-xs-block"></div>*@
+                        <div class="col-xs-6 col-sm-3 col-lg-12">
+                            <div class="form-group">
+                                <label for="txtRemark">หมายเหตุ:</label>
+                                <textarea id="txtRemark" class="form-control txtareasize106 txtarea"></textarea>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 spndiv" >
+                    <div class="col-xs-10 col-md-2 col-sm-3 col-lg-2">
                         @*Span 6*@
                         <div class="table-responsive">
-                            <div class="col-xs-4 col-sm-3 col-lg-2 padleft10p">
+                            <div class="col-xs-12 col-sm-3 col-lg-2 padleft10p">
                                 <div class="form-group">
                                     <input type="file" id="FileUpload1" multiple />
                                     <table class="example-2" cellspacing="0">
@@ -191,10 +196,16 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-xs-6 col-sm-6 col-lg-6">
-                        <div class="form-group">
-                            <button type="button" id="btnSave" class="btn btn-primary mgr10" onclick="validate()">Save</button>
-                            <button type="button" id="btnCancel" class="btn btn-danger" onclick="Redirect()">Cancel</button>
+                    <div class="col-xs-8 col-sm-5 col-lg-4 padleft0">
+                        <div class="col-xs-3 col-sm-2 col-lg-2">
+                            <div class="form-group">
+                                <button type="button" id="btnSave" class="btn btn-primary mgr10" onclick="validate()">Save</button>
+                            </div>
+                        </div>
+                        <div class="col-xs-4 col-sm-3 col-lg-3">
+                            <div class="form-group">
+                                <button type="button" id="btnCancel" class="btn btn-danger" onclick="Redirect()">Cancel</button>
+                            </div>
                         </div>
                     </div>
                 </div>
