--- a/Alpha/AlphaMvc/Views/ReportBorrow/IndexRptBorrow.cshtml
+++ b/Alpha/AlphaMvc/Views/ReportBorrow/IndexRptBorrow.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "IndexRptBorrow";
+    ViewBag.Title = "ReportRequisition";
 }
 
 <script src="@Url.Content("~/Scripts/CUDS/Report/IndexReportBorrow.js")" type="text/javascript"></script>
