--- a/Alpha/AlphaMvc/Views/SecurityProfile/EditSecurityProfile.cshtml
+++ b/Alpha/AlphaMvc/Views/SecurityProfile/EditSecurityProfile.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "EditSecurityProfile";
+    ViewBag.Title = "SecurityProfile";
 }
 
 <script src="@Url.Content("~/Scripts/CUDS/SecurityProfile/EditSecurityProfile.js")" type="text/javascript"></script>
