--- a/Alpha/AlphaMvc/Views/SecurityProfile/IndexSecurityProfile.cshtml
+++ b/Alpha/AlphaMvc/Views/SecurityProfile/IndexSecurityProfile.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "IndexSecurityProfile";
+    ViewBag.Title = "SecurityProfile";
 }
 
 <script src="@Url.Content("~/Scripts/CUDS/SecurityProfile/IndexSecurityProfile.js")" type="text/javascript"></script>
