--- a/Alpha/AlphaMvc/Views/WageTeachnician/CreateWageTeachnician.cshtml
+++ b/Alpha/AlphaMvc/Views/WageTeachnician/CreateWageTeachnician.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "CreateWageTeachnician";
+    ViewBag.Title = "WageTeachnician";
 }
 
 <script src="@Url.Content("~/Scripts/EditableGrid/paging.js")" type="text/javascript"></script>
